@@ -32,6 +32,8 @@ Extension Modules
 Library
 -------
 
+- The GET module from IRIX has been deprecate for removal in Python 3.0.
+
 - The fm module from IRIX has been deprecated for removal in Python 3.0.
 
 - The FL, flp, and fl modules from IRIX have been deprecated for removal in
